--- a/.npmignore
+++ b/.npmignore
@@ -1,6 +1,12 @@
-*.ts
-!*.d.ts
-tsconfig.json
-*.tgz
-.npmrc*
+# Exclude all files
+*
+
+# Add lib/
+!lib/**
+# Exclude .map in lib/
 *.map
+
+# Add documentation
+!LICENSE
+!CHANGELOG.md
+!README.md
