--- a/.npmignore
+++ b/.npmignore
@@ -3,8 +3,9 @@
 
 # Add lib/
 !lib/**
-# Exclude .map in lib/
+# Exclude exceptions from lib/
 *.map
+*.tsbuildinfo
 
 # Add documentation
 !LICENSE
