Add Debug Capabilities
Add a launch.json file to the .vscode folder with some launch config to
run a test or debug a source file.

Changed the jest config to a typescript file, and update the
configuration. The configuration was outdated and copied over from
vscode-psl.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -31,6 +31,13 @@
                 "panel": "new"
             },
             "problemMatcher": []
-        }
+        },
+        {
+            "type": "npm",
+            "script": "build",
+            "problemMatcher": [
+                "$eslint-stylish"
+            ],
+        },
     ]
 }
