--- a/package.json
+++ b/package.json
@@ -46,10 +46,11 @@
     "@types/jest": "^29.2.0",
     "@types/node": "^18.11.4",
     "jest": "^29.2.1",
-    "ts-jest": "^29.0.3",
-    "tslint": "^5.20.1",
-    "typescript": "^4.8.4",
     "jsonc-parser": "^3.2.0",
-    "rimraf": "^3.0.2"
+    "rimraf": "^3.0.2",
+    "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.2",
+    "tslint": "^5.20.1",
+    "typescript": "^4.8.4"
   }
 }
