--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "compile": "tsc -p tsconfig.json",
     "prebuild": "npm run clean",
     "build": "tsc -p tsconfig.build.json",
-    "lint": "tslint -c tslint.json --project .",
+    "lint": "npx eslint .",
     "watch": "npm run compile -- -watch",
     "pretest": "npm run compile",
     "test": "jest"
@@ -47,12 +47,14 @@
     "@types/fs-extra": "^9.0.13",
     "@types/jest": "^29.2.0",
     "@types/node": "^18.11.4",
+    "@typescript-eslint/eslint-plugin": "^6.17.0",
+    "@typescript-eslint/parser": "^6.17.0",
+    "eslint": "^8.56.0",
     "jest": "^29.2.1",
     "jsonc-parser": "^3.2.0",
     "rimraf": "^3.0.2",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2",
-    "tslint": "^5.20.1",
     "typescript": "^4.8.4"
   }
 }
