Simplified Debug Config
Removed the watch tasks. If any developer ever needs them, they can
introduce them again.:

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -19,14 +19,14 @@
 			"console": "integratedTerminal",
 			"internalConsoleOptions": "neverOpen",
 			"sourceMaps": true,
-			"preLaunchTask": "npm: build",
+			"preLaunchTask": "npm: compile",
 		},
 		{
 			"type": "node",
 			"request": "launch",
 			"name": "Debug current file",
 			"program": "${file}",
-			"preLaunchTask": "npm: build",
+			"preLaunchTask": "npm: compile",
 			"outFiles": [
 				"${workspaceFolder}/out/**/*.js"
 			]
