--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,39 +2,8 @@
     "version": "2.0.0",
     "tasks": [
         {
-            "label": "watch",
-            "command": "npm run watch --loglevel silent",
-            "type": "shell",
-            "group": {
-                "kind": "build",
-                "isDefault": true
-            },
-            "isBackground": true,
-            "problemMatcher": "$tsc-watch",
-            "presentation": {
-                "reveal": "never",
-                "focus": false,
-                "panel": "shared"
-            }
-        },
-        {
-            "label": "test",
-            "command": "npm run test -- --watch",
-            "type": "shell",
-            "group": {
-                "kind": "test",
-                "isDefault": true
-            },
-            "isBackground": false,
-            "presentation": {
-                "focus": false,
-                "panel": "new"
-            },
-            "problemMatcher": []
-        },
-        {
             "type": "npm",
-            "script": "build",
+            "script": "compile",
             "problemMatcher": [
                 "$eslint-stylish"
             ],
