--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mischareitsma/psl-parser",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "Profile Scripting Language Parser",
   "type": "module",
   "keywords": [
@@ -36,7 +36,6 @@
     "compile": "tsc -p tsconfig.json",
     "lint": "npx eslint .",
     "watch": "npm run compile -- -watch",
-    "pretest": "npm run compile",
     "test": "jest",
     "dist": "tsc -p tsconfig.build.json",
     "prebuild": "npm run clean && npm run lint && npm run test",
@@ -46,7 +45,8 @@
     "release": "npm run build && npm publish --access public dist/"
   },
   "dependencies": {
-    "fs-extra": "^10.1.0"
+    "fs-extra": "^10.1.0",
+    "jsonc-parser": "^3.2.0"
   },
   "devDependencies": {
     "@types/fs-extra": "^9.0.13",
@@ -56,7 +56,6 @@
     "@typescript-eslint/parser": "^6.17.0",
     "eslint": "^8.56.0",
     "jest": "^29.2.1",
-    "jsonc-parser": "^3.2.0",
     "rimraf": "^3.0.2",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2",
