Update NODE_AUTH_TOKEN Secret Name
Update the secret name for the NODE_AUTH_TOKEN (to NODE_AUTH_TOKEN :-))
just to have the same variable name everywhere.

--- a/.github/workflows/publish-build.yml
+++ b/.github/workflows/publish-build.yml
@@ -24,4 +24,4 @@ jobs:
       - name: 'Publish release'
         run: npm run release
         env:
-          NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+          NODE_AUTH_TOKEN: ${{ secrets.NODE_AUTH_TOKEN }}
