--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "url": "git+ssh://git@github.com/ing-bank/psl-parser.git"
   },
   "scripts": {
-    "clean": "rimraf lib out dist",
+    "clean": "rimraf lib out dist *.tsbuildinfo",
     "precompile": "npm run clean",
     "compile": "tsc -p tsconfig.json",
     "lint": "npx eslint .",
@@ -48,16 +48,16 @@
     "jsonc-parser": "^3.2.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.21.0",
+    "@stylistic/eslint-plugin": "^4.1.0",
     "@types/fs-extra": "^11.0.4",
     "@types/jest": "^29.5.11",
     "@types/node": "^20.11.0",
-    "@typescript-eslint/eslint-plugin": "^6.18.1",
-    "@typescript-eslint/parser": "^6.18.1",
-    "eslint": "^8.56.0",
     "jest": "^29.7.0",
     "rimraf": "^5.0.5",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "typescript-eslint": "^8.25.0"
   }
 }
