Change unit test to use node built-in test
Dropped the use of jest and start to use the built-in test modules from
node instead. Together with the introduction of tsx it also removes the
need for two different tsconfig files.

This commit started fixing the tests, but there are still a few tests
failing that will be fixed in subsequent commits.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,14 +3,14 @@
 		"noUnusedLocals": true,
 		"noUnusedParameters": false,
 		"moduleResolution": "node",
-		"module": "CommonJS",
-		"target": "esnext",
-		"outDir": "out",
+		"module": "ESNext",
+		"target": "ESNext",
 		"lib": [
-			"esnext"
+			"ESNext"
 		],
 		"inlineSourceMap": true,
-		"rootDirs": ["src", "test"],
+		"rootDir":"src",
+		"outDir": "dist",
 		"alwaysStrict": true,
 		"noImplicitThis": true,
 		"forceConsistentCasingInFileNames": true,
