--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@mischareitsma/psl-parser",
   "version": "0.0.7",
   "description": "Profile Scripting Language Parser",
+  "type": "module",
   "keywords": [
     "PSL",
     "parser",
@@ -35,7 +36,7 @@
     "compile": "tsc -p tsconfig.json",
     "lint": "npx eslint .",
     "watch": "npm run compile -- -watch",
-    "test": "jest",
+    "test": "node --test --no-warnings --import tsx test/*.test.ts",
     "dist": "tsc -p tsconfig.build.json",
     "prebuild": "npm run clean && npm run lint && npm run test",
     "build": "npm run dist && npm run generate-package-json && npm run copy-extra-files-dist",
@@ -51,12 +52,10 @@
     "@eslint/js": "^9.21.0",
     "@stylistic/eslint-plugin": "^4.1.0",
     "@types/fs-extra": "^11.0.4",
-    "@types/jest": "^29.5.11",
     "@types/node": "^20.11.0",
     "jest": "^29.7.0",
     "rimraf": "^5.0.5",
-    "ts-jest": "^29.1.1",
-    "ts-node": "^10.9.2",
+    "tsx": "^4.19.3",
     "typescript": "^5.3.3",
     "typescript-eslint": "^8.25.0"
   }
